# Sparkbot

./: .dockerignore  .env  .env.example  .env.local.example  .gitignore  AGENTS.md  CODE_SIGNING_POLICY.md  FRESH_INSTALL_CHECKLIST.md  LOGBOOK_handoff.md  PRIVACY.md  README.md  ROTATION_RUNBOOK.md  SECURITY-AUDIT.md  SECURITY.md  Troubleshooting.md  compose.codex.yml  compose.local.yml  compose.yml  consumer_readiness_checklist.md  deployment.md  guardian_suite_integration.md  package-lock.json  package.json  pyproject.toml  release-notes.md  sparkbot-backend.spec  sparkbot-cli.py  sparkbot_logbook_handoff.md  sparkbotv1_logbook_handoff.md
.venv-ci/: pyvenv.cfg
backend/: .env  Dockerfile  README.md  desktop_launcher.py  pyproject.toml  setup_chat.sh
docs/: COMMAND_CENTER_SECURITY_AUDIT.md  CONNECTOR_IDENTITY_LINKING_STATUS.md  CONNECTOR_PIN_VERIFICATION_STATUS.md  INVITE_WING_MODEL_SEATS_STATUS.md  LIMA_RUNTIME_ALIGNMENT_NOTES.md  LOCAL_AI_INTEGRATION_STATUS.md  MEETING_MEMORY_OPERATOR_SPINE_STATUS.md  P0_STABILIZATION_STATUS.md  PERSISTENT_MEMORY_SPINE_AUDIT.md  PUBLIC_PACKAGE_PROMPT_CLEANUP_STATUS.md  PUBLIC_RELEASE_ASSESSMENT_SNAPSHOT.md  PUBLIC_RELEASE_BROKEN_FEATURES.md  PUBLIC_RELEASE_BROWSER_QA_CHECKLIST.md  PUBLIC_RELEASE_CAPABILITY_MODEL.md  PUBLIC_RELEASE_FIX_QUEUE.md  PUBLIC_RELEASE_LIVE_CONNECTOR_QA_RESULTS.md  PUBLIC_RELEASE_LIVE_QA_PLAN.md  PUBLIC_RELEASE_RISK_AUDIT.md  (+24 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs  main.rs
(+344 files in other folders)
